--- a/src/main/resources/templates/addperson.html
+++ b/src/main/resources/templates/addperson.html
@@ -5,17 +5,26 @@
     <title>My Application - Add a Person</title>
 </head>
 <body>
-    <form th:action="@{/saveperson}" th:object= "${persongobject}"method="post">
-        Frist Name:
-        <input type="text" th:field="${personobject.firstName}">
+    <form   action="#"
+            th:action="@{/saveperson}"
+            th:object= "${personobject}"
+            method="post">
 
+        Frist Name:
+        <input type="text" th:field="*{firstName}"><br />
+        <span th:if="${#fields.hasErrors('firstName')}"
+            th:errors="*{firstName}"></span><br />
 
         Last Name:
-        <input type="text" th:field="*{lasttName}">
-
+        <input type="text" th:field="*{lastName}"><br />
+        <span th:if="${#fields.hasErrors('lastName')}"
+            th:errors="*{lastName}"></span><br />
 
         Email Name:
         <input type="text" th:field="*{email}">
+        <span th:if="${#fields.hasErrors('email')}"
+            th:errors="*{email}"></span>
+        <br />
 
         <input type="submit" value="Submit">
     </form>
