--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <h1> List of People </h1>
-    <p th:each="eachPerson:${people}" th:text="${eachPerson.firstName}"></p>
+    <div th:each="eachPerson:${people}">
+
+        <p th:text="${eachPerson.firstName}"></p>
+        <p th:text="${eachPerson.lastName}"></p>
+        <p th:text="${eachPerson.email}"></p>
+    </div>
 </body>
 </html>
